--- a/index.html
+++ b/index.html
@@ -307,6 +307,24 @@
                     </table>
                 </td>
             </tr>
+            <!-- Footer Copyright -->
+            <tr>
+                <td>
+                    <table width="100%">
+                        <tr>
+                            <td class="footer_qr_code">
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <a href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
         </table>
     </center>
 </body>
