--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <tr>
                 <td>
                     <table width="100%">
-                        <tr style="background: black;">
+                        <tr style="background: black; color: #fff;">
                             <td>
                                 <a style="color: #fff; padding:20px 0;" href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
                             </td>
