--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
             <tr>
                 <td>
                     <table width="100%">
-                        <tr style="background: black; color: #fff;">
+                        <tr style="background: black; color: #fff; padding:20px 0;">
                             <td>
-                                <a style="color: #fff; padding:20px 0;" href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
+                                <a href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
                             </td>
                         </tr>
                     </table>
