--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <td>
                     <table width="100%">
                         <tr style="background:black; color: #fff;">
-                            <td>
+                            <td height="30">
                                 <a href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
                             </td>
                         </tr>
