--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
             <tr>
                 <td>
                     <table width="100%">
-                        <tr style="background:black; color: #fff;">
-                            <td height="30">
+                        <tr style="background:black; color: #fff; text-align:center;">
+                            <td width="100%" height="30">
                                 <a href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
                             </td>
                         </tr>
