--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <table width="100%">
                         <tr style="background:black; color: #fff; text-align:center;">
                             <td width="100%" height="30">
-                                <a href="http://shafikul94.liveblog365.com/"><p>Designed By Shafikul Islam</p></a>
+                                <a href="http://shafikul94.liveblog365.com/"><p style="color: #fff; text-align:center;">Designed By Shafikul Islam</p></a>
                             </td>
                         </tr>
                     </table>
